--- a/app/index.css
+++ b/app/index.css
@@ -5,12 +5,17 @@ a {
     text-decoration: none;
     color: black;
 }
+h1 {
+    font-size: 20px;
+}
 .user {
     height: 200px;
     width: 300px;
     background-color: #a0a0a0;
-    border: 3px solid black;
+    border: 2px solid black;
     margin-right: 20px;
+    margin-bottom: 50px;
+    padding: 0 10px 0 10px;
 }
 .wrapper {
     margin-left: 20px;
@@ -20,5 +25,14 @@ a {
     border: 1px solid black;
     background-color: #a0a0a0;
     margin-top: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 30px;
+}
+.text {
+    display: flex;
+}
+.postText {
+    margin-left: 20px;
+}
+.userName {
+    margin-bottom: 40px;
 }
