--- a/app/index.css
+++ b/app/index.css
@@ -1,5 +1,6 @@
 p {
     font-size: 20px;
+    margin-bottom: 20px;
 }
 a {
     text-decoration: none;
@@ -8,31 +9,46 @@ a {
 h1 {
     font-size: 20px;
 }
+br {
+    line-height: 20px;
+}
 .user {
-    height: 200px;
-    width: 300px;
-    background-color: #a0a0a0;
-    border: 2px solid black;
+    height: 150px;
+    width: 242px;
+    background-color: #d8d8d8;
+    border: 1px solid grey;
     margin-right: 20px;
-    margin-bottom: 50px;
-    padding: 0 10px 0 10px;
+    margin-top: 76px;
+    padding: 0 10px 15px 16px;
 }
 .wrapper {
-    margin-left: 20px;
-    margin-right:20px;
+    margin-left: 150px;
+    margin-right:150px;
 }
 .comment {
-    border: 1px solid black;
-    background-color: #a0a0a0;
+    width: 620px;
+    border: 1px solid grey;
+    background-color: #d8d8d8;
     margin-top: 10px;
     margin-bottom: 30px;
+    padding-left: 17px;
 }
 .text {
     display: flex;
 }
 .postText {
-    margin-left: 20px;
+    width: 620px;
+    margin-left: 16px;
+}
+.userPosts {
+    margin-top: 50px;
 }
 .userName {
+    margin-bottom: 40px;
+}
+.allUsers {
+    margin-top: 170px;
+}
+.titleComments {
     margin-bottom: 40px;
 }
