--- a/app/index.css
+++ b/app/index.css
@@ -32,6 +32,7 @@ br {
     margin-top: 10px;
     margin-bottom: 30px;
     padding-left: 17px;
+    padding-right: 66px;
 }
 .text {
     display: flex;
